# bt_api_mt5

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/bt_api_mt5/: plugin.py
src/bt_api_mt5.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bt_api_mt5/gateway/: __init__.py  adapter.py
