[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_mt5"
version = "2.0.0"
description = "MetaTrader 5 plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
    "pymt5>=0.5.0",
]

[project.entry-points."bt_api.plugins"]
mt5 = "bt_api_mt5.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]
