[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_mt5"
version = "2.0.0"
description = "MetaTrader 5 plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
    "pymt5>=0.5.0",
]

[project.entry-points."bt_api.plugins"]
mt5 = "bt_api_mt5.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear (includes B904 raise-from)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF100",  # unused noqa directives
    "S",   # flake8-bandit security
    "PERF",  # perflint performance
    "PIE790",  # no-unnecessary-pass
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "PERF401",  # existing for-loop patterns for list building
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
