[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_mt5"
version = "2.0.0"
description = "MetaTrader 5 plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
    "pymt5>=0.5.0",
]

[project.entry-points."bt_api.plugins"]
mt5 = "bt_api_mt5.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E731",  # lambda assignment
    "TC002",  # dynamic import
    "TRY003",  # broad Exception
    "F403",  # star import
    "F841",  # unused variable
    "Q000",  # bad quoting
    "Q003",  # bad escaping
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
